--- a/src/pages/cards/cards.pug
+++ b/src/pages/cards/cards.pug
@@ -23,6 +23,6 @@ block content
       .cards__airDatePicker 
         +airDatePicker({uniqId: 'cardsAirDatePicker1'})
       .cards__firstRoom
-        +room({id: 'room1', type: 'люкс', price: '9 990', stars: 5, review: 145, array: ['../../images/room2.png', '../../images/room2.png', '../../images/room2.png', '../../images/room2.png']})
+        +room({id: 'room1', type: 'люкс', price: '9 990', stars: 5, review: 145, array: ['room1.1.jpg', 'room1.1.jpg', 'room1.1.jpg', 'room1.1.jpg']})
       .cards__secondRoom
-        +room({id: 'room2', type: 'люкс', price: '9 990', stars: 5, review: 145, array: ['../../images/room.png', '../../images/room.png', '../../images/room.png', '../../images/room.png']})
+        +room({id: 'room2', type: '', number: '840', price: '9 990', stars: 5, review: 65, array: ['room.png', 'room.png', 'room.png', 'room.png']})
