--- a/src/components/UI-kit/numberRoomAndPrice/numberRoomAndPrice.pug
+++ b/src/components/UI-kit/numberRoomAndPrice/numberRoomAndPrice.pug
@@ -1,9 +1,9 @@
-mixin numberRoomAndPrice({price = '', type = '', number = '888'})
+mixin numberRoomAndPrice({price = '', type = '', number = ''})
   .numberRoomAndPrice
     .numberRoomAndPrice__info 
       .numberRoomAndPrice__number-wrapper
         span.numberRoomAndPrice__number= `№ `
-        span.numberRoomAndPrice__id= number
+        span.numberRoomAndPrice__id= `${number}`
         if type === 'люкс'
           span.numberRoomAndPrice__type= ` люкс`
       .numberRoomAndPrice__price-wrapper
