--- a/src/components/toggle/toggle.scss
+++ b/src/components/toggle/toggle.scss
@@ -3,16 +3,17 @@
 .toggle {
   display: flex;
   &__Block {
+    display: flex;
+    justify-content: flex-start;
+    padding: 3px 7px 0 2px;
     width: 40px;
     height: 20px;
     border: 1px solid $dark25;
     border-radius: 10px;
     margin-right: 10px;
     cursor: pointer;
-    transition: ease-in-out 200ms;
     &--active {
       border: 1px solid #bc9cff;
-      transition: ease-in-out 200ms;
     }
   }
   &__Circle {
@@ -20,12 +21,11 @@
     height: 12px;
     background: $dark25;
     border-radius: 10px;
-    transform: translate(3px, 3px);
-    transition: ease-in-out 200ms;
+    transition: 200ms;
     &--active {
       background: linear-gradient(180deg, #bc9cff 0%, #8ba4f9 100%);
-      transform: translate(23px, 3px);
-      transition: ease-in-out 200ms;
+      transform: translateX(22px);
+      transition: 200ms;
     }
   }
   &__Text {
