--- a/src/pages/formElements/formElements.scss
+++ b/src/pages/formElements/formElements.scss
@@ -84,6 +84,9 @@
     }
     & .formElements__bullet-list {
       padding-top: 2px;
+      & h3 {
+        margin-top: 5px;
+      }
     }
   }
   &__checkbox-button {
