--- a/src/pages/landingPage/landingPage.scss
+++ b/src/pages/landingPage/landingPage.scss
@@ -11,12 +11,12 @@
 
   &__findForm {
     // margin-top: 163px;
-    margin: 0 0 0 141px;
+    margin: 1px 0 0 139px;
   }
   &__text {
     position: absolute;
-    bottom: 22px;
-    right: 226px;
+    bottom: 21px;
+    right: 228px;
     width: 297px;
     height: 48px;
     font-weight: 400;
