Added option checked to toggle. Added checked option to toggle on formElements page

--- a/src/components/toggle/toggle.pug
+++ b/src/components/toggle/toggle.pug
@@ -1,5 +1,5 @@
-mixin toggle({id = 'uniqIdToggle', text = 'ssss'})
+mixin toggle({id = 'uniqIdToggle', text = 'ssss', cheked = false})
   .toggle(data-toggle=id)
-    .toggle__Block
-      .toggle__Circle 
+    .toggle__Block(class=cheked ? "toggle__Block--active" : "")
+      .toggle__Circle(class=cheked ? "toggle__Circle--active" : "")
     .toggle__Text= text
