--- a/src/pages/formElements/formElements.pug
+++ b/src/pages/formElements/formElements.pug
@@ -63,7 +63,7 @@ block content
             +radioButton({id: 'radioButton2', title: 'Женщина', name: 'checkboxed'})
         .formElements__toggle
           h3 Toggle
-          +toggle({id: 'toggle1', text: 'Получать спецпредложения'})
+          +toggle({id: 'toggle1', text: 'Получать спецпредложения', cheked: true})
           +toggle({id: 'toggle2', text: 'Получать спецпредложения'})
         .formElements__like-button
           h3 like button
