--- a/src/components/textField/textField.pug
+++ b/src/components/textField/textField.pug
@@ -11,7 +11,7 @@ mixin textField(props)
         value=value,
         readonly=readonly,
         date-masked=mask ? "masked" : "simple",
-        date-dropdown-input=id,
+        data-dropdown-input=id,
         id=uniqId
       )
       if dropdown === true
