--- a/src/pages/searchRoom/searchRoom.pug
+++ b/src/pages/searchRoom/searchRoom.pug
@@ -14,7 +14,7 @@ block content
       .searchRoom__dateDropdown 
         +filterDateDropdown({uniqId: 'searchRoom__filterDateDropdown1', title: 'даты пребывания в отеле'})
       .searchRoom__guestDropdown
-        +dropdown({uniqId: 'dropdown1', title: 'гости', description: '', small: true, text: 'Сколько гостей'})
+        +dropdown({uniqId: 'searchRoom__dropdown1', title: 'гости', description: '', small: true, text: 'Сколько гостей'})
       .searchRoom__ratePriceSlider
       .searchRoom__rules
         h3 правила дома
