--- a/src/components/findRooms/findRooms.pug
+++ b/src/components/findRooms/findRooms.pug
@@ -8,8 +8,8 @@ mixin findRooms({id = ''})
       .findRooms__header
         h1 Найдём номера под ваши пожелания
       .findRooms__dateDropdown
-        +dateDropdown({uniqId: `cards__dateDropdown-${id}`, firstTitle: 'прибытие', secondTitle: 'выезд'})
+        +dateDropdown({uniqId: `cards__dateDropdown_${id}`, firstTitle: 'прибытие', secondTitle: 'выезд'})
       .findRooms__guestDropdown
-        +dropdown({uniqId: `cards__dropdown-${id}`, title: 'гости', description: '', text: 'Сколько гостей'})
+        +dropdown({uniqId: `cards__dropdown_${id}`, title: 'гости', description: '', text: 'Сколько гостей'})
       .findRooms__button
         +button({title: 'Подобрать номер', type: 'big', arrow: true})
