Fixed dropdown bug. When the minus button was pressed, if the state became zero, then the header was not reset.

--- a/src/components/dropdown/dropdown.scss
+++ b/src/components/dropdown/dropdown.scss
@@ -45,9 +45,9 @@
     top: 10px;
     right: 10px;
     cursor: pointer;
-    &--small {
-      right: 64px;
-    }
+    // &--small {
+    //   right: 64px;
+    // }
   }
   &__bottomField {
     position: absolute;
