--- a/src/components/textField/textField.scss
+++ b/src/components/textField/textField.scss
@@ -10,6 +10,9 @@
       width: 266px;
     }
   }
+  &__small {
+    width: 266px;
+  }
 
   &__title {
     font-weight: 700;
@@ -58,5 +61,8 @@
     top: 34px;
     right: 63px;
     color: $purple;
+    &--small {
+      right: 10px;
+    }
   }
 }
